--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<p>Hello GitHub Pages</p>
-	<a href="http://www.facebook.com/sharer/sharer.php?u=http://free2bcreative.github.io/TestGitHubPages/&title=Hello GitHub Pages"></a>
+	<a href="http://www.facebook.com/sharer/sharer.php?u=http://free2bcreative.github.io/TestGitHubPages/&title=Hello GitHub Pages">Share on Facebook</a>
 </body>
 </html>
