Adding meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Test Page</title>
+	<meta property="og:image" content="https://edge.fscdn.org/assets/img/home/engage/lohp/photos_768px-6292762710fc372d3b980b88b9d4091f.jpg" />
 </head>
 <body>
 	<p>Hello GitHub Pages</p>
