--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Test Page</title>
+	<meta property="og:title" content="Workday Sets Price Range for I.P.O." />
 	<!-- <meta property="og:image" content="http://free2bcreative.github.io/TestGitHubPages/screenshot.png" /> -->
 </head>
 <body>
