--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Test Page</title>
 	<meta property="og:title" content="Workday Sets Price Range for I.P.O." />
-	<!-- <meta property="og:image" content="http://free2bcreative.github.io/TestGitHubPages/screenshot.png" /> -->
+	<meta property="og:image" content="http://free2bcreative.github.io/TestGitHubPages/screenshot.png" />
 </head>
 <body>
 	<p>Hello GitHub Pages</p>
 	<a href="http://www.facebook.com/sharer/sharer.php?u=http://free2bcreative.github.io/TestGitHubPages/&title=Hello GitHub Pages">Share on Facebook</a>
-	<img src="http://free2bcreative.github.io/TestGitHubPages/screenshot.png" alt="Screenshot">
+	
 </body>
 </html>
