fixing link in other.html

--- a/other.html
+++ b/other.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<p>Hello GitHub Pages</p>
-	<a href="http://www.facebook.com/sharer/sharer.php?u=http://free2bcreative.github.io/TestGitHubPages/&title=Hello GitHub Pages">Share on Facebook</a>
+	<a href="http://www.facebook.com/sharer/sharer.php?u=http://free2bcreative.github.io/TestGitHubPages/other.html&title=Hello GitHub Pages">Share on Facebook</a>
 	
 </body>
 </html>
