--- a/other.html
+++ b/other.html
@@ -5,6 +5,7 @@
 	<title>Other Test Page</title>
 	<meta property="og:title" content="The META title works" />
 	<meta property="og:image" content="http://free2bcreative.github.io/TestGitHubPages/other.png" />
+	<meta property="og:description" content="Yep, I've pretty much made up a description here.  Yep yep.  There it is!" />
 </head>
 <body>
 	<p>Hello GitHub Pages</p>
