--- a/other.html
+++ b/other.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Other Test Page</title>
 	<meta property="og:title" content="The META title works" />
-	<meta property="og:image" content="http://free2bcreative.github.io/TestGitHubPages/mountain.jpg" />
+	<meta property="og:image" content="http://free2bcreative.github.io/TestGitHubPages/birthday_screenshot.png" />
 	<meta property="og:description" content="Yep, I've pretty much made up a description here.  Yep yep.  There it is!" />
 </head>
 <body>
