Fixes to nameshare

--- a/nameshare.html
+++ b/nameshare.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Name Def</title>
+	<title>Name Share</title>
 	<meta property="og:title" content="How many people share my name?" />
 	<meta property="og:image" content="http://free2bcreative.github.io/TestGitHubPages/nameshare_screenshot.png" />
 	<meta property="og:description" content="Discover how many people share your name on your birth year." />
