Adding twitter meta image tage

--- a/nameshare.html
+++ b/nameshare.html
@@ -6,6 +6,7 @@
 	<meta property="og:title" content="How many people share my name?" />
 	<meta property="og:image" content="http://free2bcreative.github.io/TestGitHubPages/nameshare_screenshot.png" />
 	<meta property="og:description" content="Discover how many people share your name on your birth year." />
+	<meta name="twitter:image:src" content="http://free2bcreative.github.io/TestGitHubPages/nameshare_screenshot.png">
 </head>
 <body>
 	<p>Hello GitHub Pages</p>
