Adding twitter meta image tage to namedef

--- a/namedef.html
+++ b/namedef.html
@@ -6,6 +6,7 @@
 	<meta property="og:title" content="What is the meaning of my name?" />
 	<meta property="og:image" content="http://free2bcreative.github.io/TestGitHubPages/namedef_screenshot.png" />
 	<meta property="og:description" content="Discover what the meaning of your first and last name are." />
+	<meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
 	<p>Hello GitHub Pages</p>
