Adding twitter meta image tage to birthday

--- a/birthday.html
+++ b/birthday.html
@@ -6,6 +6,7 @@
 	<meta property="og:title" content="What happened in the year you were born?" />
 	<meta property="og:image" content="http://free2bcreative.github.io/TestGitHubPages/birthday_screenshot.png" />
 	<meta property="og:description" content="Discover what life was like in years past." />
+	<meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
 	<p>Hello GitHub Pages</p>
