More links to share

--- a/nameshare.html
+++ b/nameshare.html
@@ -11,7 +11,12 @@
 </head>
 <body>
 	<p>Hello GitHub Pages</p>
-	<a href="http://www.facebook.com/sharer/sharer.php?u=http://free2bcreative.github.io/TestGitHubPages/nameshare.html&title=Hello GitHub Pages">Share on Facebook</a>
+	<a href="javascript:void(window.open('http://www.facebook.com/sharer/sharer.php?u=http://free2bcreative.github.io/TestGitHubPages/nameshare.html&title=Hello GitHub Pages', '', 'toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, resizable=no, copyhistory=no, width=500, height=400, top=520, left=1030'))">Share on Facebook</a>
+	<a href="javascript:void(window.open('http://twitter.com/intent/tweet?status=SomeOtherTitle+http://free2bcreative.github.io/TestGitHubPages/nameshare.html', '', 'toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, resizable=no, copyhistory=no, width=500, height=400, top=520, left=1030'))">Share on Twitter</a>
+	<a href="javascript:void(window.open('http://pinterest.com/pin/create/bookmarklet/?media=http://free2bcreative.github.io/TestGitHubPages/nameshare_screenshot.png&url=http://free2bcreative.github.io/TestGitHubPages/nameshare.html&is_video=false&description=OtherTitle', '', 'toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, resizable=no, copyhistory=no, width=500, height=400, top=520, left=1030'))">Share on Pinterest</a>
+	<a href="javascript:void(window.open('https://plus.google.com/share?url=http://free2bcreative.github.io/TestGitHubPages/nameshare.html', '', 'toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, resizable=no, copyhistory=no, width=500, height=400, top=520, left=1030'))">Share on Google Plus</a>
+
+
 	
 </body>
 </html>
